Add some larger structural changes

--- a/app/src/app.html
+++ b/app/src/app.html
@@ -48,4 +48,11 @@
   <body>
     <div>%sveltekit.body%</div>
   </body>
+
+  <style>
+    html,
+    body {
+      margin: 0px;
+    }
+  </style>
 </html>
