Add in some improvements

--- a/app/src/app.html
+++ b/app/src/app.html
@@ -47,6 +47,10 @@
 
   <body>
     <div>%sveltekit.body%</div>
+
+    <!-- Google API Libraries -->
+    <script async defer src="https://apis.google.com/js/api.js"></script>
+    <script async defer src="https://accounts.google.com/gsi/client"></script>
   </body>
 
   <style>
