--- a/app/src/app.html
+++ b/app/src/app.html
@@ -21,7 +21,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tiddlydrive2.example.com/" />
-    <meta property="og:image" content="%sveltekit.assets%/favicon.ico" />
+    <meta id="td2-app-og-image" property="og:image" content="%sveltekit.assets%/favicon.ico" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Tiddly Drive 2" />
@@ -29,9 +29,18 @@
       name="twitter:description"
       content="Open & save your TiddlyWiki files directly in Google Drive with zero server storage."
     />
+    <meta
+      id="td2-app-twitter-image"
+      name="twitter:image"
+      content="%sveltekit.assets%/favicon.ico"
+    />
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.ico" />
+    <link id="td2-app-favicon" rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link
+      id="td2-app-apple-touch-icon"
+      rel="apple-touch-icon"
+      href="%sveltekit.assets%/favicon.ico"
+    />
     <!-- Material Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <!-- Roboto -->
