--- a/app/src/app.html
+++ b/app/src/app.html
@@ -4,7 +4,7 @@
     <title>Tiddly Drive 2 – Open & Save TiddlyWiki Files from Google Drive</title>
     <meta
       name="description"
-      content="Tiddly Drive 2 lets you securely open, edit, and save single‑file TiddlyWiki documents stored in your Google Drive using minimal OAuth scope (drive.file) and a privacy‑first, client‑only approach."
+      content="Tiddly Drive 2 lets you securely open, edit, and save single‑file TiddlyWiki documents stored in your Google Drive using minimal OAuth scopes (drive.file) and a privacy‑first, client‑only approach."
     />
     <meta
       name="keywords"
